Update Chinese translation

--- a/project.json
+++ b/project.json
@@ -216,8 +216,8 @@
 	"snapshotoverlay" : "",
 	"tags" : [ "Anime" ],
 	"title" : "Blue Archive | Yurizono Seia (Swimsuit)",
-	"type" : "web",
-	"version" : 3,
+	"type" : "Web",
+	"version" : 5,
 	"visibility" : "public",
 	"workshopid" : "3531814034",
 	"workshopurl" : "steam://url/CommunityFilePage/3531814034"
